--- a/webapp/templates/results.html
+++ b/webapp/templates/results.html
@@ -12,5 +12,6 @@
 
 <p>When "{{ the_phrase }}" is searched for "{{ the_letters }}", the following results are returned:</p>
 <h3>{{ the_results }}</h3>
+<a href='/'><button>Search Again</button></a>
 
 {% endblock %}
